BCC_BCC36B__Noemi_1563882/implementação/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     lista_declaracoes -> error
Rule 5     declaracao -> declaracao_variaveis
Rule 6     declaracao -> inicializacao_variaveis
Rule 7     declaracao -> declaracao_funcao
Rule 8     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 9     declaracao_variaveis -> tipo DOIS_PONTOS error
Rule 10    inicializacao_variaveis -> atribuicao
Rule 11    lista_variaveis -> var VIRGULA lista_variaveis
Rule 12    lista_variaveis -> var
Rule 13    var -> ID
Rule 14    var -> ID indice
Rule 15    indice -> indice ABRE_COL expressao FECHA_COL
Rule 16    indice -> ABRE_COL expressao FECHA_COL
Rule 17    tipo -> INTEIRO
Rule 18    tipo -> FLUTUANTE
Rule 19    declaracao_funcao -> tipo cabecalho
Rule 20    declaracao_funcao -> cabecalho
Rule 21    cabecalho -> ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
Rule 22    lista_parametros -> lista_parametros VIRGULA parametro
Rule 23    lista_parametros -> parametro
Rule 24    lista_parametros -> vazio
Rule 25    parametro -> tipo DOIS_PONTOS ID
Rule 26    parametro -> parametro ABRE_COL FECHA_COL
Rule 27    corpo -> corpo acao
Rule 28    corpo -> vazio
Rule 29    acao -> expressao
Rule 30    acao -> declaracao_variaveis
Rule 31    acao -> se
Rule 32    acao -> repita
Rule 33    acao -> leia
Rule 34    acao -> escreva
Rule 35    acao -> retorna
Rule 36    acao -> error
Rule 37    se -> SE expressao ENTAO corpo FIM
Rule 38    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 39    repita -> REPITA corpo ATE expressao
Rule 40    atribuicao -> var ATRIBUT expressao
Rule 41    leia -> LEIA ABRE_PAR ID FECHA_PAR
Rule 42    escreva -> ESCREVA ABRE_PAR expressao FECHA_PAR
Rule 43    retorna -> RETORNA ABRE_PAR expressao FECHA_PAR
Rule 44    expressao -> expressao_logica
Rule 45    expressao -> atribuicao
Rule 46    expressao_logica -> expressao_simples
Rule 47    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 48    expressao_simples -> expressao_aditiva
Rule 49    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 50    expressao_aditiva -> expressao_multiplicativa
Rule 51    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 52    expressao_multiplicativa -> expressao_unaria
Rule 53    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 54    expressao_unaria -> fator
Rule 55    expressao_unaria -> operador_soma fator
Rule 56    operador_relacional -> MENOR
Rule 57    operador_relacional -> MAIOR
Rule 58    operador_relacional -> IGUAL
Rule 59    operador_relacional -> DIFERENCA
Rule 60    operador_relacional -> MENOR_IGUAL
Rule 61    operador_relacional -> MAIOR_IGUAL
Rule 62    operador_relacional -> NEGACAO
Rule 63    operador_logico -> E_LOGICO
Rule 64    operador_logico -> OU_LOGICO
Rule 65    operador_soma -> SOMA
Rule 66    operador_soma -> SUB
Rule 67    operador_multiplicacao -> MULT
Rule 68    operador_multiplicacao -> DIVISAO
Rule 69    fator -> ABRE_COL expressao FECHA_COL
Rule 70    fator -> var
Rule 71    fator -> chamada_funcao
Rule 72    fator -> numero
Rule 73    numero -> INTEIRO
Rule 74    numero -> FLUTUANTE
Rule 75    numero -> NOTACAO_CIENTIFICA
Rule 76    chamada_funcao -> ID ABRE_PAR lista_argumentos FECHA_PAR
Rule 77    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 78    lista_argumentos -> expressao
Rule 79    lista_argumentos -> vazio
Rule 80    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COL             : 15 16 26 69
ABRE_PAR             : 21 41 42 43 76
ATE                  : 39
ATRIBUT              : 40
DIFERENCA            : 59
DIVISAO              : 68
DOIS_PONTOS          : 8 9 25
ENTAO                : 37 38
ESCREVA              : 42
E_LOGICO             : 63
FECHA_COL            : 15 16 26 69
FECHA_PAR            : 21 41 42 43 76
FIM                  : 21 37 38
FLUTUANTE            : 18 74
ID                   : 13 14 21 25 41 76
IGUAL                : 58
INTEIRO              : 17 73
LEIA                 : 41
MAIOR                : 57
MAIOR_IGUAL          : 61
MENOR                : 56
MENOR_IGUAL          : 60
MULT                 : 67
NEGACAO              : 62
NOTACAO_CIENTIFICA   : 75
OU_LOGICO            : 64
REPITA               : 39
RETORNA              : 43
SE                   : 37 38
SENAO                : 38
SOMA                 : 65
SUB                  : 66
VIRGULA              : 11 22 77
error                : 4 9 36

Nonterminals, with rules where they appear

acao                 : 27
atribuicao           : 10 45
cabecalho            : 19 20
chamada_funcao       : 71
corpo                : 21 27 37 38 38 39
declaracao           : 2 3
declaracao_funcao    : 7
declaracao_variaveis : 5 30
escreva              : 34
expressao            : 15 16 29 37 38 39 40 42 43 69 77 78
expressao_aditiva    : 48 49 51
expressao_logica     : 44 47
expressao_multiplicativa : 50 51 53
expressao_simples    : 46 47 49
expressao_unaria     : 52 53
fator                : 54 55
indice               : 14 15
inicializacao_variaveis : 6
leia                 : 33
lista_argumentos     : 76 77
lista_declaracoes    : 1 2
lista_parametros     : 21 22
lista_variaveis      : 8 11
numero               : 72
operador_logico      : 47
operador_multiplicacao : 53
operador_relacional  : 49
operador_soma        : 51 55
parametro            : 22 23 26
programa             : 0
repita               : 32
retorna              : 35
se                   : 31
tipo                 : 8 9 19 25
var                  : 11 12 40 70
vazio                : 24 28 79

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) lista_declaracoes -> . error
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . inicializacao_variaveis
    (7) declaracao -> . declaracao_funcao
    (8) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (9) declaracao_variaveis -> . tipo DOIS_PONTOS error
    (10) inicializacao_variaveis -> . atribuicao
    (19) declaracao_funcao -> . tipo cabecalho
    (20) declaracao_funcao -> . cabecalho
    (17) tipo -> . INTEIRO
    (18) tipo -> . FLUTUANTE
    (40) atribuicao -> . var ATRIBUT expressao
    (21) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (13) var -> . ID
    (14) var -> . ID indice

    error           shift and go to state 14
    INTEIRO         shift and go to state 13
    FLUTUANTE       shift and go to state 8
    ID              shift and go to state 3

    declaracao_funcao              shift and go to state 1
    programa                       shift and go to state 2
    atribuicao                     shift and go to state 10
    var                            shift and go to state 4
    inicializacao_variaveis        shift and go to state 11
    declaracao                     shift and go to state 6
    tipo                           shift and go to state 12
    declaracao_variaveis           shift and go to state 5
    cabecalho                      shift and go to state 7
    lista_declaracoes              shift and go to state 9

state 1

    (7) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 7 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 7 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 7 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 7 (declaracao -> declaracao_funcao .)


state 2

    (0) S' -> programa .



state 3

    (21) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (13) var -> ID .
    (14) var -> ID . indice
    (15) indice -> . indice ABRE_COL expressao FECHA_COL
    (16) indice -> . ABRE_COL expressao FECHA_COL

    ABRE_PAR        shift and go to state 17
    ATRIBUT         reduce using rule 13 (var -> ID .)
    ABRE_COL        shift and go to state 16

    indice                         shift and go to state 15

state 4

    (40) atribuicao -> var . ATRIBUT expressao

    ATRIBUT         shift and go to state 18


state 5

    (5) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 5 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 5 (declaracao -> declaracao_variaveis .)


state 6

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 7

    (20) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 20 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 20 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 20 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 20 (declaracao_funcao -> cabecalho .)


state 8

    (18) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 18 (tipo -> FLUTUANTE .)
    ID              reduce using rule 18 (tipo -> FLUTUANTE .)


state 9

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . inicializacao_variaveis
    (7) declaracao -> . declaracao_funcao
    (8) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (9) declaracao_variaveis -> . tipo DOIS_PONTOS error
    (10) inicializacao_variaveis -> . atribuicao
    (19) declaracao_funcao -> . tipo cabecalho
    (20) declaracao_funcao -> . cabecalho
    (17) tipo -> . INTEIRO
    (18) tipo -> . FLUTUANTE
    (40) atribuicao -> . var ATRIBUT expressao
    (21) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (13) var -> . ID
    (14) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 13
    FLUTUANTE       shift and go to state 8
    ID              shift and go to state 3

    declaracao_funcao              shift and go to state 1
    atribuicao                     shift and go to state 10
    var                            shift and go to state 4
    inicializacao_variaveis        shift and go to state 11
    declaracao                     shift and go to state 19
    tipo                           shift and go to state 12
    declaracao_variaveis           shift and go to state 5
    cabecalho                      shift and go to state 7

state 10

    (10) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 10 (inicializacao_variaveis -> atribuicao .)


state 11

    (6) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 6 (declaracao -> inicializacao_variaveis .)


state 12

    (8) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (9) declaracao_variaveis -> tipo . DOIS_PONTOS error
    (19) declaracao_funcao -> tipo . cabecalho
    (21) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    DOIS_PONTOS     shift and go to state 22
    ID              shift and go to state 20

    cabecalho                      shift and go to state 21

state 13

    (17) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 17 (tipo -> INTEIRO .)
    ID              reduce using rule 17 (tipo -> INTEIRO .)


state 14

    (4) lista_declaracoes -> error .

    INTEIRO         reduce using rule 4 (lista_declaracoes -> error .)
    FLUTUANTE       reduce using rule 4 (lista_declaracoes -> error .)
    ID              reduce using rule 4 (lista_declaracoes -> error .)
    $end            reduce using rule 4 (lista_declaracoes -> error .)


state 15

    (14) var -> ID indice .
    (15) indice -> indice . ABRE_COL expressao FECHA_COL

  ! shift/reduce conflict for ABRE_COL resolved as shift
    ATRIBUT         reduce using rule 14 (var -> ID indice .)
    MULT            reduce using rule 14 (var -> ID indice .)
    DIVISAO         reduce using rule 14 (var -> ID indice .)
    SOMA            reduce using rule 14 (var -> ID indice .)
    SUB             reduce using rule 14 (var -> ID indice .)
    MENOR           reduce using rule 14 (var -> ID indice .)
    MAIOR           reduce using rule 14 (var -> ID indice .)
    IGUAL           reduce using rule 14 (var -> ID indice .)
    DIFERENCA       reduce using rule 14 (var -> ID indice .)
    MENOR_IGUAL     reduce using rule 14 (var -> ID indice .)
    MAIOR_IGUAL     reduce using rule 14 (var -> ID indice .)
    NEGACAO         reduce using rule 14 (var -> ID indice .)
    E_LOGICO        reduce using rule 14 (var -> ID indice .)
    OU_LOGICO       reduce using rule 14 (var -> ID indice .)
    FECHA_PAR       reduce using rule 14 (var -> ID indice .)
    VIRGULA         reduce using rule 14 (var -> ID indice .)
    FIM             reduce using rule 14 (var -> ID indice .)
    error           reduce using rule 14 (var -> ID indice .)
    SE              reduce using rule 14 (var -> ID indice .)
    REPITA          reduce using rule 14 (var -> ID indice .)
    LEIA            reduce using rule 14 (var -> ID indice .)
    ESCREVA         reduce using rule 14 (var -> ID indice .)
    RETORNA         reduce using rule 14 (var -> ID indice .)
    INTEIRO         reduce using rule 14 (var -> ID indice .)
    FLUTUANTE       reduce using rule 14 (var -> ID indice .)
    ID              reduce using rule 14 (var -> ID indice .)
    NOTACAO_CIENTIFICA reduce using rule 14 (var -> ID indice .)
    ATE             reduce using rule 14 (var -> ID indice .)
    SENAO           reduce using rule 14 (var -> ID indice .)
    FECHA_COL       reduce using rule 14 (var -> ID indice .)
    $end            reduce using rule 14 (var -> ID indice .)
    ENTAO           reduce using rule 14 (var -> ID indice .)
    ABRE_COL        shift and go to state 23

  ! ABRE_COL        [ reduce using rule 14 (var -> ID indice .) ]


state 16

    (16) indice -> ABRE_COL . expressao FECHA_COL
    (44) expressao -> . expressao_logica
    (45) expressao -> . atribuicao
    (46) expressao_logica -> . expressao_simples
    (47) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (40) atribuicao -> . var ATRIBUT expressao
    (48) expressao_simples -> . expressao_aditiva
    (49) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (13) var -> . ID
    (14) var -> . ID indice
    (50) expressao_aditiva -> . expressao_multiplicativa
    (51) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (52) expressao_multiplicativa -> . expressao_unaria
    (53) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (54) expressao_unaria -> . fator
    (55) expressao_unaria -> . operador_soma fator
    (69) fator -> . ABRE_COL expressao FECHA_COL
    (70) fator -> . var
    (71) fator -> . chamada_funcao
    (72) fator -> . numero
    (65) operador_soma -> . SOMA
    (66) operador_soma -> . SUB
    (76) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (73) numero -> . INTEIRO
    (74) numero -> . FLUTUANTE
    (75) numero -> . NOTACAO_CIENTIFICA

    ID              shift and go to state 25
    ABRE_COL        shift and go to state 27
    SOMA            shift and go to state 30
    SUB             shift and go to state 33
    INTEIRO         shift and go to state 39
    FLUTUANTE       shift and go to state 34
    NOTACAO_CIENTIFICA shift and go to state 32

    fator                          shift and go to state 24
    operador_soma                  shift and go to state 35
    expressao_simples              shift and go to state 38
    var                            shift and go to state 26
    atribuicao                     shift and go to state 36
    expressao_logica               shift and go to state 37
    expressao_multiplicativa       shift and go to state 28
    numero                         shift and go to state 29
    expressao_aditiva              shift and go to state 31
    expressao                      shift and go to state 40
    chamada_funcao                 shift and go to state 41
    expressao_unaria               shift and go to state 42

state 17

    (21) cabecalho -> ID ABRE_PAR . lista_parametros FECHA_PAR corpo FIM
    (22) lista_parametros -> . lista_parametros VIRGULA parametro
    (23) lista_parametros -> . parametro
    (24) lista_parametros -> . vazio
    (25) parametro -> . tipo DOIS_PONTOS ID
    (26) parametro -> . parametro ABRE_COL FECHA_COL
    (80) vazio -> .
    (17) tipo -> . INTEIRO
    (18) tipo -> . FLUTUANTE

    FECHA_PAR       reduce using rule 80 (vazio -> .)
    VIRGULA         reduce using rule 80 (vazio -> .)
    INTEIRO         shift and go to state 13
    FLUTUANTE       shift and go to state 8

    vazio                          shift and go to state 43
    tipo                           shift and go to state 44
    lista_parametros               shift and go to state 45
    parametro                      shift and go to state 46

state 18

    (40) atribuicao -> var ATRIBUT . expressao
    (44) expressao -> . expressao_logica
    (45) expressao -> . atribuicao
    (46) expressao_logica -> . expressao_simples
    (47) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (40) atribuicao -> . var ATRIBUT expressao
    (48) expressao_simples -> . expressao_aditiva
    (49) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (13) var -> . ID
    (14) var -> . ID indice
    (50) expressao_aditiva -> . expressao_multiplicativa
    (51) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (52) expressao_multiplicativa -> . expressao_unaria
    (53) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (54) expressao_unaria -> . fator
    (55) expressao_unaria -> . operador_soma fator
    (69) fator -> . ABRE_COL expressao FECHA_COL
    (70) fator -> . var
    (71) fator -> . chamada_funcao
    (72) fator -> . numero
    (65) operador_soma -> . SOMA
    (66) operador_soma -> . SUB
    (76) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (73) numero -> . INTEIRO
    (74) numero -> . FLUTUANTE
    (75) numero -> . NOTACAO_CIENTIFICA

    ID              shift and go to state 25
    ABRE_COL        shift and go to state 27
    SOMA            shift and go to state 30
    SUB             shift and go to state 33
    INTEIRO         shift and go to state 39
    FLUTUANTE       shift and go to state 34
    NOTACAO_CIENTIFICA shift and go to state 32

    fator                          shift and go to state 24
    operador_soma                  shift and go to state 35
    expressao_simples              shift and go to state 38
    var                            shift and go to state 26
    atribuicao                     shift and go to state 36
    expressao_logica               shift and go to state 37
    expressao_multiplicativa       shift and go to state 28
    numero                         shift and go to state 29
    expressao_aditiva              shift and go to state 31
    expressao                      shift and go to state 47
    chamada_funcao                 shift and go to state 41
    expressao_unaria               shift and go to state 42

state 19

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 20

    (21) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    ABRE_PAR        shift and go to state 17


state 21

    (19) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)


state 22

    (8) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) declaracao_variaveis -> tipo DOIS_PONTOS . error
    (11) lista_variaveis -> . var VIRGULA lista_variaveis
    (12) lista_variaveis -> . var
    (13) var -> . ID
    (14) var -> . ID indice

    error           shift and go to state 49
    ID              shift and go to state 48

    lista_variaveis                shift and go to state 51
    var                            shift and go to state 50

state 23
